修改:1.0.3版本发布&修复若干bug&更规范代码