@@ -4,6 +4,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 
 /**
@@ -15,14 +16,14 @@ public class CommonUtil
 {
     /**
      * 判断对象是否为null
-     * @param argName 参数名
      * @param arg     参数
+     * @param message 错误消息
      */
-    public static void assertObjectNull(String argName,Object arg)
+    public static void assertObjectNull(Object arg,String message)
     {
         if(arg == null)
         {
-            throw new NullPointerException(argName.concat(" can not be null"));
+            throw new NullPointerException(message);
         }
     }
 
@@ -36,41 +37,42 @@ public class CommonUtil
         {
             if(args[i] == null)
             {
-                throw new NullPointerException("arg index of " + i + " can not be null");
+                throw new NullPointerException("arg index of " + i + " can not be null.");
             }
         }
     }
 
     /**
      * 判断数组是否为空
-     * @param argName   数组名
      * @param args      参数
+     * @param message   错误消息
      */
-    public static void assertArrayEmpty(String argName,Object[] args)
+    public static void assertArrayEmpty(Object[] args,String message)
     {
         if(args == null || args.length <= 0)
         {
-            throw new NullPointerException(argName.concat(" can not be empty"));
+            throw new NullPointerException(message);
         }
     }
 
     /**
      * 判断集合是否为空
-     * @param argName       集合名
      * @param collection    集合
+     * @param message       集合名
+     *
      */
-    public static void assertListEmpty(String argName,Collection collection)
+    public static void assertCollectionEmpty(Collection<?> collection,String message)
     {
-        if(collection == null || collection.size() <=0)
+        if(collection == null || collection.isEmpty())
         {
-            throw new NullPointerException(argName.concat(" can not be empty"));
+            throw new NullPointerException(message);
         }
     }
 
     /**
      * 判断字符串是否以图片名结尾
      * @param str       字符串
-     * @return          字符串
+     * @return          字符串是否以图片后缀结尾
      */
     public static boolean endWithImgType(String str)
     {
@@ -91,16 +93,16 @@ public class CommonUtil
     {
         if(localDir == null)
         {
-            throw new IllegalArgumentException("local directory  cannot be null");
+            throw new IllegalArgumentException("local directory cannot be null.");
         }
-        Path path = Path.of(localDir);
+        Path path = Paths.get(localDir);
         if(Files.notExists(path))
         {
-            throw new IllegalArgumentException("local directory is not exist");
+            throw new IllegalArgumentException("local directory is not exist.");
         }
         if(!Files.isDirectory(path))
         {
-            throw new IllegalArgumentException("local directory must be a directory,can not be a file");
+            throw new IllegalArgumentException("local directory cannot be file.");
         }
     }
 
@@ -111,18 +113,18 @@ public class CommonUtil
      */
     public static Path checkLocalFile(String filePath)
     {
-        if(filePath == null || filePath.isBlank())
+        if(filePath == null || filePath.isEmpty() || filePath.trim().isEmpty())
         {
-            throw new IllegalArgumentException("file cannot be null");
+            throw new IllegalArgumentException("file cannot be null.");
         }
-        Path path = Path.of(filePath);
+        Path path = Paths.get(filePath);
         if(Files.notExists(path))
         {
-            throw new IllegalArgumentException("file is not exist");
+            throw new IllegalArgumentException("file is not exist.");
         }
         if(Files.isDirectory(path))
         {
-            throw new IllegalArgumentException("file must be a file,can not be directory");
+            throw new IllegalArgumentException("file cannot be directory.");
         }
         return path;
     }
@@ -134,19 +136,14 @@ public class CommonUtil
      */
     public static File createFile(String file) throws IOException
     {
-        Path path = Path.of(file);
+        Path path = Paths.get(file);
         Path parent = path.getParent();
         //如果父目录存在就直接创建当前文件
-        if(Files.exists(parent))
-        {
-            Files.createFile(path);
-        }
-        //如果父目录不存在就先创建父目录再创建当前文件
-        else
+        if (!Files.exists(parent))
         {
             Files.createDirectories(parent);
-            Files.createFile(path);
         }
+        Files.createFile(path);
         return path.toFile();
     }
 }
